# streamlit-annotation-tools

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: example.py
src/streamlit_annotation_tools/: __init__.py
src/streamlit_annotation_tools/frontend/: package.json
src/streamlit_annotation_tools/frontend/src/components/: Labeler.tsx
src/streamlit_annotation_tools/frontend/src/helpers/: labelerHelpers.ts
src/streamlit_annotation_tools/frontend/src/reducers/: labelerReducer.tsx
src/streamlit_annotation_tools/frontend/src/types/: labelerTypes.ts
