[project]
name = "streamlit-annotation-tools"
version = "1.0.1"
description = "Component for annotating text for NLP resolution"
readme = "README.md"
authors = [
    { name = "Rubens", email = "38709237+andrader@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.21.0",
]

[tool.hatch.build.targets.sdist]
include = ["./src/streamlit_annotation_tools/frontend/build/**/*"]
exclude = ["**/node_modules/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_annotation_tools"]

[project.scripts]
streamlit-annotation-tools = "streamlit_annotation_tools:main"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



